<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_at_my_gui"
        android:layout_row="0"
        android:textSize="30dp"
        android:layout_columnSpan="2"/>

    <Button
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/i_m_a_button"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/check_this_out" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_column="0"
        android:layout_row="2" />

    <Switch
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/switch_on_off"
        android:layout_column="1"
        android:layout_row="2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:layout_columnSpan="2" />

</GridLayout>