<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/look_at_my_gui"
        android:id="@+id/GUI_text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GUI_text"
        android:text="@string/ButtonText2"/>


    <CheckBox
        android:id="@+id/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/GUI_text"
        android:layout_toEndOf="@+id/button"
        android:text="@string/check_this_out" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:id="@+id/ImageButton"
        android:layout_below="@+id/button" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="187dp"
        android:layout_height="0dp"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/ImageButton"
        android:text="@string/switch_on_off" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/EditText"
        android:layout_below="@+id/ImageButton"/>



</RelativeLayout>