<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/chatRoomList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chatRoomSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chatRoomSend" />

        <EditText
            android:id="@+id/chatRoomEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chatRoomHint"
            android:inputType="text" />

        <Button
            android:id="@+id/chatRoomReceiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chatRoomReceive"/>

    </LinearLayout>

</LinearLayout>